--- a/style.css
+++ b/style.css
@@ -12,9 +12,38 @@ header{
     width: 100%;
     height: calc(100vh - 200px);
     background-color: #242424;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#book_slider{
+    height: 500px;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    flex-direction: row;
+    gap: 25px;
+}
+
+.bookContainer{
+    border-radius: 25px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    height: 350px;
+    width: 250px;
+    background-color: black;
+    
+}
+
+.titleArea{
+    border-bottom: 1px;
+    border-color: aqua;
 }
 
 footer{
+    height: 50px;
     background-color: #1f1f1f;
     height: 100px;
     width: 100%;
