--- a/style.css
+++ b/style.css
@@ -3,27 +3,27 @@ body{
 }
 
 header{
+    display: flex;
+    align-items: center;
     background-color: #1f1f1f;
     height: 100px;
     width: 100%;
 }
-
-.content{
-    width: 100%;
-    height: calc(100vh - 200px);
-    background-color: #242424;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+header img{
+    height: 60px;
+    
 }
 
-#book_slider{
-    height: 500px;
+#content{
     width: 100%;
+    height: calc(100% - 200px);
+    gap: 50px;
+    background-color: #242424;
     display: flex;
+    flex-direction: column;
+    flex: 1;
+    justify-content: center;
     align-items: center;
-    flex-direction: row;
-    gap: 25px;
 }
 
 .bookContainer{
@@ -31,15 +31,18 @@ header{
     display: flex;
     flex-direction: column;
     align-items: center;
-    height: 350px;
-    width: 250px;
+    height: 600px;
+    width: 400px;
     background-color: black;
-    
 }
 
 .titleArea{
-    border-bottom: 1px;
-    border-color: aqua;
+    color: white;
+
+}
+
+.write-comment{
+    display: flex;
 }
 
 footer{
