--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@ header{
 }
 header img{
     height: 60px;
+    cursor: pointer;
     
 }
 
@@ -29,6 +30,7 @@ header img{
 }
 
 .bookContainer{
+    color: white;
     border-radius: 25px;
     display: flex;
     flex-direction: column;
@@ -55,11 +57,45 @@ header img{
 .image-div img{
     height: 150px;
 }
+.price-like-container{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding-left: 16px;
+    padding-right: 16px;
+}
+
+#bookPrice{
+    font-size: 20px;
+    color: #00dbde;
+}
+
+#likeButton{
+    align-items: center;
+    display: flex;
+    gap: 10px;      
+}
+
+#likeButton img {
+    height: 24px;
+    filter: invert();
+    cursor: pointer;
+}
+
+.like-counter{
+    color: #fc00ff;
+}
 
 .informations{
     height: 198px;
     width: 400px;
     background-color: rgb(0, 0, 0);
+}
+
+.informations table{
+    width: 260px;
+    padding-left: 16px;
+    padding-right: 16px;
 }
 
 .comments{
