--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ header img{
     gap: 50px;
     background-color: #242424;
     display: flex;
-    flex-direction: column;
+    flex-wrap: wrap;
     flex: 1;
     justify-content: center;
     align-items: center;
@@ -38,6 +38,7 @@ header img{
     height: 600px;
     width: 400px;
     background-color: black;
+    margin: 10px;
 }
 
 .line{
@@ -87,21 +88,33 @@ header img{
 }
 
 .informations{
-    height: 198px;
+    height: 158px;
     width: 400px;
     background-color: rgb(0, 0, 0);
 }
 
+
 .informations table{
-    width: 260px;
+    width: 360px;
+    height: 80px;
     padding-left: 16px;
     padding-right: 16px;
+    table-layout: fixed;
 }
 
 .comments{
+    overflow: auto;
     background-color: rgb(0, 0, 0);
-    height: 148px;
+    height: 180px;
     width: 400px;
+}
+
+.desgin-Comments-Table{
+    padding-top: 20px;
+    width: 380px;
+    table-layout: auto;
+    padding-left: 16px;
+    padding-right: 16px;
 }
 
 .write-comments{
