--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@ body{
 }
 
 header{
+    justify-content: center;
     display: flex;
     align-items: center;
     background-color: #1f1f1f;
@@ -154,4 +155,62 @@ footer{
     background-color: #1f1f1f;
     height: 100px;
     width: 100%;
+}
+
+@media(max-width: 450px){
+    .bookContainer{
+        width: 300px;
+    }
+
+    .line{
+        height: 2px;
+        width: 300px;
+        background: linear-gradient(-45deg, #fc00ff 0%, #00dbde 100% );
+    }
+
+    .image-div{
+        height: 150px;
+        background-color: #1a1919;
+        width: 300px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .informations{
+        height: 158px;
+        width: 300px;
+        background-color: rgb(0, 0, 0);
+    }
+
+    .informations table{
+        width: 300px;
+        height: 80px;
+        padding-left: 16px;
+        padding-right: 16px;
+        table-layout: fixed;
+    }
+
+    .comments{
+        overflow: auto;
+        background-color: rgb(0, 0, 0);
+        height: 180px;
+        width: 300px;
+    }
+
+    .desgin-Comments-Table{
+        padding-top: 20px;
+        width: 280px;
+        table-layout: auto;
+        padding-left: 16px;
+        padding-right: 16px;
+    }
+
+    .write-comments input{
+        border-radius: 10px;
+        height: 24px;
+        width: 200px;
+        background-color: #1a1919;
+        color: white;
+    }
 }
